# TradingBot

./: cleanup_remove_legacy_migrations.bat  debug.py  main.py  pyproject.toml  run_tests.bat  setup.bat
bat/: cleanup_remove_legacy_migrations.bat  run_tests.bat
config/: config.ini  keys.ini  sectors.ini  strategy.ini  watchlist.ini
db/: active_trades.db  active_trades.db-shm  active_trades.db-wal  backtest_results.db  backtest_results.db-shm  backtest_results.db-wal  decision_logs.db  decision_logs.db-shm  decision_logs.db-wal  historical_prices.db-shm  historical_prices.db-wal  metrics.db  trade_history.db  trade_history.db-shm  trade_history.db-wal
docs/: ARCHITECTURE.md  CURRENT_PROGRAM_BREAKDOWN.md  INCIDENT_CHECKLIST.md  LOG_INCIDENT_CODE_INDEX.md  RUNBOOK.md  program_analysis.md
logs/: [v5.16.2] [SETUP LOG] [2026.02.16_16.02.47].txt  [v5.16.2] [SETUP LOG] [2026.02.16_16.33.45].txt  [v5.16.2] [SETUP LOG] [2026.02.16_17.08.52].txt  [v5.16.2] [SETUP LOG] [2026.02.16_17.38.29].txt  [v5.16.2] [SETUP LOG] [2026.02.16_18.20.12].txt  [v5.17.0] [SETUP LOG] [2026.02.16_19.57.22].txt  [v6.15.0] [SETUP LOG] [2026.02.18_22.43.16].txt  [v6.15.0] [SETUP LOG] [2026.02.18_23.36.33].txt
modules/: agent_master.py  agent_shadow.py  ai.py  ai_trainer_tool.py  app_constants.py  architect.py  autopilot_controller.py  backfill.py  backtest_runner.py  config_defaults.py  config_io.py  config_validate.py  database.py  event_bus.py  experiments.py  governance.py  log_throttle.py  logging_utils.py  main.py  metrics.py  paths.py  popups.py  scheduler.py  sentiment.py  startup_paths.py  (+4 more)
(+124 files in other folders)
