[project]
name = "tradingbot"
version = "6.7.0"
description = "TradingBot automated research + execution platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["modules/tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
